# problem_solving_template_gen

./: CMakeLists.txt  README.md  pst.cpp
templates/: cpp_problem.cpp
